--- a/views/config.pug
+++ b/views/config.pug
@@ -7,16 +7,32 @@ block content
         div(class="box-body")
             div(class="card")
                 div(class="card-header")
-                    h3(class="card-title" style="font-weight:bold") R O T I N A S   
-                        i(class="fa fa-plus" style="margin-left:10px;cursor:pointer;" title="Adicionar")
+                    h3(class="card-title" style="font-weight:bold") R O T I N A S  
+                        button(class="btn btn-default" data-toggle="modal" data-target="#mymodal" style="float:right") +                                                      
                 div(class="card-body table-responsive p-0")
                     table(class="table table-hover")
                         tbody
                             each objeto in objetos
                                 tr
                                     th(style="font-size:0.85em;font-weight:normal") #{objeto.nome}
-
-
             a(href="/" style="float:right")
                 button(class="btn btn-primary" title="Configurador")
                     i(class="fa fa-home")
+
+    div(class="modal open" id="mymodal" style="display:none" aria-hidden="true")
+        div(class="modal-dialog")
+            div(class="modal-content")     
+                div(class="modal-header")
+                    h4(class="modal-title") Nova Rotina                             
+                div(class="modal-body")
+                    form
+                        div(class="form-group")
+                            input(class="form-control" type="text" aria-describedby="rotinaHelp" placeholder="Nome da Rotina")
+                            small(id="rotinaHelp" class="form-text text-muted") Exemplo: MATA010
+                        div(class="form-group")
+                            input(class="form-control" type="text" aria-describedby="descHelp" placeholder="Descrição da Rotina")
+                            small(id="descHelp" class="form-text text-muted") Exemplo: Cadastro de Produtos   
+                div(class="modal-footer justify-content-between")
+                    button(type="button" class="btn btn-success" data-dismiss="modal") Salvar 
+                    button(type="button" class="btn btn-default" data-dismiss="modal") Cancelar               
+            
