--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,7 @@ html
     link(rel="stylesheet" href="stylesheets/style.css")
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
     script(src='javascripts/globals.js')
+    script(src='stylesheets/admin-lte/bower_components/bootstrap/dist/js/bootstrap.min.js')
   body(style="padding:20px;background-color:#E6E6FA")
     block content
     
