--- a/views/config.pug
+++ b/views/config.pug
@@ -15,6 +15,12 @@ block content
                             button(class="btn btn-primary" title="Configurador" style="float:left")
                                 i(class="fa fa-home")
                                                 
+    div(class="form-group")
+        select(id="comboRotina" onchange="carregaOperacoes(event.target.value)" class="form-control") 
+            option(value='') Selecione a rotina...
+                each objeto in objetos
+                    option(value=objeto.id) #{objeto.nome}   
+
                     table(class="table table-hover")
                         tbody
                             each objeto in objetos
@@ -30,6 +36,7 @@ block content
                                                 button(class="btn btn-box-tool" onclick=`btnRemoverRotina(${objeto.id})`)
                                                      i(class="fa fa-times")                                      
                                         a(href='#' id=`operacoes${objeto.id}` class="card-body" onclick="testeaa()")                    
+    div(id="operacoes1")
     div(class="modal fade" id="mymodal" style="display:none" aria-hidden="true")
         div(class="modal-dialog")
             div(class="modal-content")     
