--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,9 +9,6 @@ html
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js")
 
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css")
-
     link(rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js")
     script(src="https://unpkg.com/axios/dist/axios.min.js")
@@ -40,7 +37,7 @@ html
     // ChartJS 
     script(src='stylesheets/admin-lte/plugins/chart.js/Chart.min.js')
     // PAGE SCRIPTS 
-    script(src='stylesheets/admin-lte/dist/js/pages/dashboard2.js')
+    //script(src='stylesheets/admin-lte/dist/js/pages/dashboard2.js')
 
   body(style="padding:20px;background-color:#E6E6FA")
     block content
