--- a/views/config.pug
+++ b/views/config.pug
@@ -13,29 +13,27 @@ block content
                         button(class="btn btn-primary" data-toggle="modal" data-target="#mymodal" style="float:right") +   
                         a(href="/")
                             button(class="btn btn-primary" title="Configurador" style="float:left")
-                                i(class="fa fa-home")
-                                                
-    div(class="form-group")
-        select(id="comboRotina" onchange="carregaOperacoes(event.target.value)" class="form-control") 
-            option(value='') Selecione a rotina...
-                each objeto in objetos
-                    option(value=objeto.id) #{objeto.nome}   
-
-                    table(class="table table-hover")
-                        tbody
-                            each objeto in objetos
-                                tr
-                                    th(class="card collapsed-card")
-                                        div(class="card-header") 
-                                            h5(id=`${objeto.id}` class="card-title" style="font-weight:bold")  #{objeto.nome}
-                                            div(class="card-tools pull-right")
-                                                button(type="button" class="btn btn-card-tool" data-card-widget="collapse"  onclick=`carregaOperacoes(${objeto.id})`)
-                                                    i(id=`icon${objeto.id}` class="fa fa-plus")  
-                                                button(class="btn btn-box-tool" data-toggle="modal" data-target="#aaa")   
-                                                     i(class="fa fa-wrench")  
-                                                button(class="btn btn-box-tool" onclick=`btnRemoverRotina(${objeto.id})`)
-                                                     i(class="fa fa-times")                                      
-                                        a(href='#' id=`operacoes${objeto.id}` class="card-body" onclick="testeaa()")                    
+                                i(class="fa fa-home")                                          
+        div(class="form-group")
+            select(id="comboRotina" onchange="carregaOperacoes(event.target.value)" class="form-control") 
+                option(value='') Selecione a rotina...
+                    each objeto in objetos
+                        option(value=objeto.id) #{objeto.nome}   
+    br
+    div(id="newOperationCard" class="card card-primary card fade")
+        div(class="card-header")
+            h5(class="card-title") Nova Operação
+            div(class="card-tools")
+                button(type="button" class="btn btn-tool" data-card-widget="collapse")
+                    i(class="fas fa-plus")
+        div(class="card-body bg-gradient-default")
+            div(class="form-group")
+                input(id="operationName" class="form-control" type="text" aria-describedby="rotinaHelp" placeholder="Nome da Operação")
+                br
+                br
+                textarea(id="operationText" class="col-md-12" rows="10" placeholder="Preencha aqui as instruções da operação a ser cadastrada.")
+        div(class="card-footer bg-gradient-primary")
+            button(class="btn btn-default" style="float: right" onclick="insertOperation()") Gravar
     div(class="content")
         div(class="content-head")
             div(class="content-fluid")
@@ -83,6 +81,6 @@ block content
                     div(class="form-group")
                         h6 Deseja mesmo deletar essa operação? 
                 div(class="modal-footer justify-content-between")
-                    button(type="button" class="btn btn-danger" onclick="btnIncluirRotina()") Deletar 
+                    button(name="btnDelete" type="button" class="btn btn-danger") Deletar 
                     button(type="button" class="btn btn-default" data-dismiss="modal") Cancelar                                           
             
