--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,6 +19,11 @@ html
     link(rel='stylesheet', href='stylesheets/admin-lte/dist/css/adminlte.min.css.map')
     link(rel='stylesheet', href='stylesheets/admin-lte/plugins/fontawesome-free/css/all.min.css')
 
+    //Toastr
+    link(rel='stylesheet', href='stylesheets/admin-lte/plugins/toastr/toastr.css')
+    link(rel='stylesheet', href='stylesheets/admin-lte/plugins/toastr/toastr.min.css')
+    script(src='stylesheets/admin-lte/plugins/toastr/toastr.min.js')
+
     script(src='stylesheets/admin-lte/plugins/jquery/jquery.min.js')
     // Bootstrap 
     script(src='stylesheets/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js')
